force-app/main/default/objects/Duty_Station__c/Duty_Station__c.object-meta.xml
<CustomObject>
    <description>An employee&apos;s Duty Station - primarily used for US Federal Government Duty Stations</description>
    <label>Duty Station</label>
    <nameField>
        <label>Duty Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duty Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>