force-app/main/default/objects/Duty_Station__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Duty Station City</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>