force-app/main/default/objects/Duty_Station__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Duty Station Code</description>
    <inlineHelpText>Code associated with Duty Station</inlineHelpText>
    <label>Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>