force-app/main/default/objects/Duty_Station__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Duty Station County</description>
    <label>County</label>
    <length>80</length>
    <type>Text</type>
</CustomField>