force-app/main/default/objects/Duty_Station__c/fields/LPA__c.field-meta.xml
<CustomField>
    <fullName>LPA__c</fullName>
    <label>Locality Pay Area (LPA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK - Alaska</fullName>
            </value>
            <value>
                <fullName>AL - Albany-Schenectady, NY-MA</fullName>
            </value>
            <value>
                <fullName>AQ - ALBUQUERQUE-SANTA FE-LAS VEGAS, NM</fullName>
            </value>
            <value>
                <fullName>AT - Atlanta--Athens-Clarke County--Sandy Springs, GA-AL</fullName>
            </value>
            <value>
                <fullName>AU - AUSTIN-ROUND ROCK, TX</fullName>
            </value>
            <value>
                <fullName>BH - BIRMINGHAM-HOOVER-TALLADEGA, AL</fullName>
            </value>
            <value>
                <fullName>BN - BURLINGTON-SOUTH BURLINGTON, VT</fullName>
            </value>
            <value>
                <fullName>BO - Boston-Worcester-Providence, MA-RI-NH-ME</fullName>
            </value>
            <value>
                <fullName>BU - Buffalo-Cheektowaga, NY</fullName>
            </value>
            <value>
                <fullName>CC - CORPUS CHRISTI-KINGSVILLE-ALICE, TX</fullName>
            </value>
            <value>
                <fullName>CH - Chicago-Naperville, IL-IN-WI</fullName>
            </value>
            <value>
                <fullName>CI - Cincinnati-Wilmington-Maysville, OH-KY-IN</fullName>
            </value>
            <value>
                <fullName>CL - Cleveland-Akron-Canton, OH</fullName>
            </value>
            <value>
                <fullName>CO - Columbus-Marion-Zanesville, OH</fullName>
            </value>
            <value>
                <fullName>CS - COLORADO SPRINGS, CO</fullName>
            </value>
            <value>
                <fullName>CT - CHARLOTTE-CONCORD, NC-SC</fullName>
            </value>
            <value>
                <fullName>DA - Dallas-Fort Worth, TX-OK</fullName>
            </value>
            <value>
                <fullName>DG - Dayton-Springfield-Sidney, OH</fullName>
            </value>
            <value>
                <fullName>DN - Denver-Aurora, CO</fullName>
            </value>
            <value>
                <fullName>DT - Detroit-Warren-Ann Arbor, MI</fullName>
            </value>
            <value>
                <fullName>DV - DAVENPORT-MOLINE, IA-IL</fullName>
            </value>
            <value>
                <fullName>HA - Hartford-West Hartford, CT-MA</fullName>
            </value>
            <value>
                <fullName>HB - HARRISBURG-LEBANON, PA</fullName>
            </value>
            <value>
                <fullName>HI - Hawaii</fullName>
            </value>
            <value>
                <fullName>HO - Houston-The Woodlands, TX</fullName>
            </value>
            <value>
                <fullName>HU - Huntsville-Decatur-Albertville, AL</fullName>
            </value>
            <value>
                <fullName>IN - Indianapolis-Carmel-Muncie, IN</fullName>
            </value>
            <value>
                <fullName>KC - Kansas City-Overland Park-Kansas City, MO-KS</fullName>
            </value>
            <value>
                <fullName>LA - Los Angeles-Long Beach, CA</fullName>
            </value>
            <value>
                <fullName>LR - LAREDO, TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>